--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,11 +8,27 @@ on:
 
 jobs:
 
-  build:
+#   build:
+
+#     runs-on: ubuntu-latest
+
+#     steps:
+#     - uses: actions/checkout@v3
+#     - name: Build the Docker image
+#       run: docker build .
+
+  phpstan-install:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build .
+    - name: Install phpstan
+      run: cd tools/ && composer install
+
+  phpstan-run:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Run phpstan
+      run: vendor/bin/phpstan
