--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,14 +8,14 @@ on:
 
 jobs:
 
-#   build:
+  build:
 
-#     runs-on: ubuntu-latest
+    runs-on: ubuntu-latest
 
-#     steps:
-#     - uses: actions/checkout@v3
-#     - name: Build the Docker image
-#       run: docker build .
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build the Docker image
+      run: docker build .
 
   phpstan-install:
 
