--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,14 +8,7 @@ on:
 
 jobs:
 
-  build:
 
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v3
-    - name: Build the Docker image
-      run: docker build .
 
   phpstan-install:
 
@@ -23,7 +16,7 @@ jobs:
 
     steps:
     - name: Install phpstan
-      run: cd tools && composer install
+      run: composer install -d tools
 
   phpstan-run:
 
