--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,9 @@
-.github
+/.github
 /vendor
 /docker/db/export/**
 /docker/db/import/**
 /tools/vendor
 /tools/composer.lock
+.editorconfig
 .env
 composer.lock
