--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
   "authors": [
     {
       "name": "Clairveillance",
+      "homepage": "https://laraxel.com",
       "email": "info@clairveillance.com"
     }
   ],
